# nuitka_eg

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
installer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
