[project]
name = "installer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sd44",email = "sd44sd44@yeah.net"},
]
dependencies = ["pyside6>=6.11.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
